deploy/argocd/apps/jaeger/kustomize/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: jaeger
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-system
  hostnames:
    - jaeger.k8s.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger-query
          port: 16686
